v4.9.0/_sources/generated/pcdsdevices.gon.Kappa.rst.txt
pcdsdevices.gon.Kappa
=====================

.. currentmodule:: pcdsdevices.gon

.. autoclass:: Kappa

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - sample_stage
          - :class:`~pcdsdevices.gon.KappaXYZStage`
          - 
          - 
          - normal
          - 
    
        * - eta (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_eta}``
          - 
          - normal
          - 
    
        * - kappa (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_kappa}``
          - 
          - normal
          - 
    
        * - phi (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self._prefix_phi}``
          - 
          - normal
          - 
    
        * - e_eta (FCpt)
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - 
    
        * - e_chi (FCpt)
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - 
    
        * - e_phi (FCpt)
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: check_motor_step
    .. automethod:: check_single
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: e_to_k
    .. automethod:: forward
    .. automethod:: get
    .. automethod:: inverse
    .. automethod:: k_to_e
    .. automethod:: move
    .. automethod:: move_single
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: to_pseudo_tuple
    .. automethod:: to_real_tuple
    .. automethod:: trigger
    .. automethod:: wait
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: composite_egu
    .. autoattribute:: concurrent
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: e_chi_coord
    .. autoattribute:: e_eta_coord
    .. autoattribute:: e_phi_coord
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: needs_parent
    .. autoattribute:: position
    .. autoattribute:: pseudo_positioners
    .. autoattribute:: real_position
    .. autoattribute:: real_positioners
    .. autoattribute:: sequential
    .. autoattribute:: settle_time
    .. autoattribute:: stage_group
    .. autoattribute:: target
    .. autoattribute:: timeout
    
    